# heatmap_demo

./: .gitignore  AGENTS.md  LICENSE  NOTES.md  README.md  common.py  environment.yml  notes.md  pyproject.toml
docs/: NOTES.md
heatmap_demo/: __init__.py  __main__.py  common.py  paths.py
heatmap_demo/data/: baci_dataset.py  multibaci_dataset.py  server.py
heatmap_demo/dynamic/: bokeh_dynamic.py  dash_dynamic.py  holoviews_dynamic.py  nicegui_dynamic.py  reflex_dynamic.py  shiny_dynamic.py  solara_dynamic.py  streamlit_dynamic.py  voila_dynamic.py
heatmap_demo/static/: bokeh_static.py  d3blocks_static.py  holoviews_static.py  plotly_static.py  vega_static.py
heatmap_demo/with_js/: chartjs.py  d3_static.py  echarts.html  echarts.py  nivo_static.html  nivo_static.py  observable.html  observable.py  template.py  tui_static.py
heatmap_demo/with_wasm/: app.py  baci_dataset.json  index.html
oak_trade_agent/: __init__.py  __main__.py  baci_dataset.py  filter_baci.py  holoviews_heatmap.py  load_baci.py  multibaci_dataset.py  plotly_heatmap.py  vega_heatmap.py
oak_trade_agent/data/: __init__.py  baci_dataset.py  fast_api.py  multibaci_dataset.py  server.py
oak_trade_agent/dynamic/: bokeh_dynamic.py  bokeh_heatmap.py  d3blocks_heatmap.py  dash_dynamic.py  dash_heatmap.py  holoviews_dynamic.py  holoviews_heatmap.py  nicegui_dynamic.py  reflex_dynamic.py  shiny_dynamic.py  (+6 more)
output/: bokeh_static.html  chartjs.html  d3_static.html  echarts.html  nivo_static.html  observable.html  tui_static.html  vega_static.html
scripts/: create_database.py  load_baci_data.py
(+35 files in other folders)
