[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatmap_demo"
version = "1.0.0"

description = "This python package helps answer questions on oak trade statistics based on bilateral Comtrade data."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
  { name = "Paul Rougieux" },
  { name = "Lucas Sinclair" }
]

urls = { Homepage = "https://github.com/mojo-leo/heatmap_demo/" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.5.0",
    "altair>=5.0.0",
    "numpy>=1.20.0",
    "plotly>=5.0.0",
    "dash>=2.0.0",
    "streamlit>=1.0.0",
    "shiny>=0.7.0",
    "fsspec>=2024.12.0",
    "rich>=13.0.0",
    "bokeh>=3.0.0",
    "holoviews>=1.15.0",
    "panel>=0.15.0",
    "py3-wget>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pytest>=7.0.0",
    "ipython>=8.0.0",
]

[tool.setuptools]
packages = ["heatmap_demo"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]